<?xml version="1.0"?>
<package>
  <name>test_node</name>
  <version>0.0.0</version>
  <description>The test_node package</description>

 
  <maintainer email="rmb@todo.todo">rmb</maintainer>

  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
